Giving up on fixing card vertical stretch behavior - time to clean up

--- a/style.css
+++ b/style.css
@@ -256,7 +256,9 @@ Most icons are #FFFFFF
     grid-column-end: 3;
     display: grid;
     grid-template-columns: 3fr 1fr;
-    grid-template-rows: 75px 5fr;
+    /*grid-template-rows: 75px 5fr;*/
+    grid-template-rows: auto;
+    height: auto;
     gap: 0px;
 }
 
@@ -269,8 +271,6 @@ Most icons are #FFFFFF
 .dashboard h2 {
     font-family: roboto-medium;
     font-weight: 800;
-    
-    
 }
 
 
@@ -280,9 +280,13 @@ Most icons are #FFFFFF
     padding-right: 30px;
     padding-bottom: 60px;
     display: grid;
-    grid-column-start: 1;
+    grid-column: 1 / 2;
     grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    grid-auto-rows: auto; /*min(200px, 1fr);*/
+    /*grid-template-rows: repeat(2, minmax(200px, 300px));*/
+    /*grid-template-rows: repeat(auto-fit, minmax(300px, 400px)) auto-fit;*/
     /*grid-template-columns: 1fr 1fr;*/
+    
     
     justify-items: center;
     gap: 30px;
@@ -297,11 +301,13 @@ Most icons are #FFFFFF
     border-left: solid #e8a02e 10px;
     background-color: var(--background-white);
     border-radius: var(--dash-element-border-radius);
-    height: auto;
     display: grid;
     grid-template-rows: auto 1fr auto;
     
     position: relative;
+    min-height: 0;
+
+    
 }
 
 
@@ -318,8 +324,10 @@ Most icons are #FFFFFF
     color: var(--content-font-color);
     font-weight: 500;
     margin: 5px 0px 0px 0px;
-    max-height: 200px;
-    
+    /*max-height: 200px;*/
+
+    overflow: hidden;
+    text-overflow:ellipsis;
 
     
 }
